--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <ul>
         <li><a href="./recipes/mac-n-cheese.html">Mac-n-Cheese</a></li>
-        <li><a href=""></a>Crispy Magic Corn</li>
+        <li><a href="./recipes/magic-corn.html">Crispy Magic Corn</a></li>
         <li><a href=""></a></li>
     </ul>
 </body>
