--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="./recipes/mac-n-cheese.html">Mac-n-Cheese</a></li>
         <li><a href="./recipes/magic-corn.html">Crispy Magic Corn</a></li>
-        <li><a href=""></a></li>
+        <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
     </ul>
 </body>
 </html>
