Description of the butter chicken.

--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -9,6 +9,23 @@
     <h1>Butter Chicken</h1>
     <img src="../butter.jpeg" alt="Butter Chicken">
     <h2>Description</h2>
+    <p>Experience the rich, creamy delight of Butter Chicken, a beloved classic
+        in Indian cuisine that’s sure to tantalize your taste buds.
+    </p>
+    <p>
+        This dish features succulent pieces of chicken simmered in a velvety 
+        tomato-based sauce, infused with aromatic spices and a generous dollop 
+        of butter for that signature smooth, indulgent texture. The sauce 
+        combines the warmth of garam masala, the sweetness of cream, and 
+        the tang of tomatoes, creating a harmonious blend that envelops 
+        each piece of chicken in a comforting embrace. Finished with a sprinkle 
+        of dried fenugreek and served with warm naan or fluffy basmati rice, Butter 
+        Chicken is a dish that promises both elegance and comfort in every bite.
+    </p>
+    <p>
+        Perfect for family dinners or special occasions, this recipe is a timeless 
+        favorite that brings a touch of Indian magic to your table.
+    </p>
     <h3>Ingredients</h3>
     <ul>
         <li>250g of chicken</li>
